--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -1,166 +1,222 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<!-- Meta -->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="DigitalCoop Finance Limited - Invest And Earn">
-    <meta name="keywords" content="DigitalCoop Finance Invest Earn">
-    <meta name="author" content="DigitalCoop">
-	<!-- Page Title -->
-	<title>
-        @!section('title')
-        :: DigitalCoop Finance Limited - Invest And Earn</title>
-	<!-- Google Fonts css-->
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i,900%7CPoppins:300,400,500,600,700,800,900" rel="stylesheet">
-	<!-- Bootstrap css -->
-	<link href="/assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<!-- Font Awesome icon css-->
-	<link href="/assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
-	<link href="/assets/css/flaticon.css" rel="stylesheet" media="screen">
-	<!-- Swiper's CSS -->
-	<link rel="stylesheet" href="/assets/css/swiper.min.css">
-	<!-- Animated css -->
-	<link href="/assets/css/animate.css" rel="stylesheet">
-	<!-- Magnific Popup CSS -->
-	<link href="/assets/css/magnific-popup.css" rel="stylesheet">
-	<!-- Slick nav css -->
-	<link rel="stylesheet" href="/assets/css/slicknav.css">
-    <!-- Main custom css -->
-    <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
-	<link href="/assets/css/index.css" rel="stylesheet" media="screen">
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	 <link rel="icon" href="/assets/images/favicon.ico?hello=1" type="image/gif" sizes="32x32"> 
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/icons/favicon152.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/favicon144.png">
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/icons/favicon120.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/favicon114.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icons/favicon72.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon16.png">
-	
-		<!-- css files -->
-	<link rel="stylesheet" href="/assets/css/pricing.css" type="text/css" media="all" /> <!-- Style-CSS --> 
-	<!-- //css files -->
-	
-	<!-- web-fonts -->
-	<link href="http://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext" rel="stylesheet">
-	<!-- //web-fonts -->
-	
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="/assets/images/favicon.png">
+  <title>LandCrowdy -
+      @!section('title')
+
+  </title>
 </head>
-<body data-spy="scroll" data-target="#navigation" data-offset="71">
-	
-	<!-- Preloader starts -->
-	<div class="preloader">
-		<div class="loader"></div>
-	</div>
-	<!-- Preloader Ends -->
 
-	<!-- Header Section Starts-->
-	<header>
-		<nav class="navbar navbar-toggleable-md navbar-light fixed-top" id="navigation">
-			<div class="container">
-				<a class="navbar-brand" href="/"><img src="/assets/images/logo.png" alt="" /></a>
-				<ul class="navbar-nav ml-auto" id="main-menu">
-					<li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="{{ route('guest.about') }}">About</a></li> 
-					<li class="nav-item"><a class="nav-link" href="{{ route('guest.trading') }}">Trading</a></li>
-					<li class="nav-item"><a class="nav-link" href="{{ route('guest.faq') }}">FAQ</a></li>
-					<li class="nav-item"><a class="nav-link" href="{{ route('guest.chart') }}">Charts</a></li>
-					<li class="nav-item"><a class="nav-link" href="{{ route('guest.contact') }}">Contact Us</a></li>
-					<li class="nav-item"><a class="nav-link" href="{{ route('app.signup') }}">Sign Up</a></li>
-				</ul>
-				
-				<div class="navbar-toggle"></div>
-				<div id="responsive-menu"></div>
-			</div>
-		</nav>
-	</header>
-    @!section('content')
-	<!-- Footer Section starts -->
-	<footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-9">
-                        
-                        
-                        <!-- Footer Menu start -->
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="{{ route('guest.about') }}">About</a></li>
-                                <li><a href="{{ route('guest.trading') }}">Trading</a></li>
-                                <li><a href="{{ route('guest.faq') }}">FAQ</a></li>
-                                <li><a href="{{ route('guest.chart') }}">Charts</a></li>
-                                <li><a href="{{ route('guest.contact') }}">Contact us</a></li>
-                                <li><a href="#">Terms</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
-                        </div>
-                        <!-- Footer Menu end -->
-                        
-                        <!-- Footer contact info start -->
-                        
-                        <!-- Footer contact info end -->
-                    </div>
-                    
-                    <div class="col-md-3 text-right">
-                        <div class="footer-logo">
-                            <img src="/assets/images/footer-logo1.png" alt="" />
-                        </div>
-                        
-                        <div class="copyright">
-                            <p>&copy; {{ currentYear() }} DigitalCoop.com.ng | Digital Cooporative Finance Ltd. All Rights Reserved.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Footer Section ends -->
-    <!--Start of Tawk.to Script-->
-    @include('includes.whatsapp')
+<body>
+  <!-- ==============Top nav==========  -->
+  <div class="container-fluid bg-light py-1 tnav">
+    <div class="row">
+      <div class="col-md-4 px-5 py-2">
+        <h6 class="small tnav1"><b>Nigeria's #1 Digital Property Platform</b> </h6>
+      </div>
+      <div class="col-md-4 text-center px-5 py-2">
+        <h6 class="small tnav1"><b>Helpline: +234 (0) 811 775 8384</b> </h6>
+      </div>
+      <div class="col-md-4 text-right d-none d-md-block">
+        <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook p-2 mx-2  text-white"></i></a>
+        <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter  p-2 mx-2 text-white"></i></a>
+        <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ"><i
+            class="fa fa-youtube  p-2 mx-2 text-white"></i></a>
+        <a href="#"><i class="fa fa-google-plus  p-2 mx-2 text-white"></i></a>
+        <a href="https://instagram.com/landcrowdy"><i class="fa fa-instagram  p-2 mx-2 text-white"></i></a>
+        <a href="#"><i class="fa fa-linkedin  p-2 mx-2 text-white"></i></a>
+      </div>
+    </div>
+  </div>
+  <!-- ==============Top nav==========  -->
 
-    <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/58d8e2a3f97dd14875f5a4cd/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+  <!--Navbar -->
+  <nav class=" navbar navbar-expand-lg navbar-dark default-color bg-dark sticky-top">
+    <a class="navbar-brand" href="http://www.landcrowdy.com.ng"><img src="/assets/images/logo12.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+      aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent-333">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link mx-4" href="/">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle mx-3" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">About Us
+          </a>
+          <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+            <a class="dropdown-item" href="{{ route('guest.company') }}">Our Company</a>
+            <a class="dropdown-item" href="{{ route('guest.blog') }}">Blog</a>
+            <a class="dropdown-item" href="{{ route('guest.teams') }}">Our Team</a>
+
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-3" href="{{ route('guest.property') }}">Properties</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-3" href="plan.html">Investment Plan</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle mx-3" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Get Help
+          </a>
+          <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+            <a class="dropdown-item" href="{{ route('guest.faq') }}">FAQ</a>
+            <a class="dropdown-item" href="{{ route('guest.contact') }}">Contact Us</a>
+          </div>
+        </li>
+
+      </ul>
+      <a class="btn tnav4 waves-effect text-white mx-1" href="login.html" role="button">Sign In</a>
+      <a class="btn tnav4 waves-effect text-white mx-1" href="register.html" role="button">Create A Free Account</a>
+  </nav>
+  <!--/.Navbar -->
+
+	@!section('content')
+
+  <!-- Footer -->
+  <div class="container-fluid bg-dark">
+    <div class="row mx-5 py-5">
+      <div class="col-md-4">
+        <a href="index.html"> <img src="/assets/images/logo12.png" alt=""> </a>
+        <h6 class="mt-3 text-white">We are Nigeria’s 1st Property tech company whose mission is to end the problem of
+          shelter in Nigeria, one building at a time.</h6>
+        <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
+          </span><br> <span class="text-white">+234-811-775-8384</span> </h5></b><br><br>
+        <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook  mx-1 text-success"></i></a>
+        <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter mx-1 text-success"></i></a>
+        <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ"><i
+            class="fa fa-youtube  mx-1 text-success"></i></a>
+        <a href="#"><i class="fa fa-google-plus  mx-1 text-success"></i></a>
+        <a href="https://instagram.com/landcrowdy"><i class="fa fa-instagram  mx-1 text-success"></i></a>
+        <a href="#"><i class="fa fa-linkedin  mx-1 text-success"></i></a>
+
+      </div>
+      <div class="col-md-2">
+        <h3 class="text-white">Useful Links </h3>
+        <ul class="text-white">
+          <li class="pt-4">About Us</li>
+          <li class="pt-4">Contact Us</li>
+          <li class="pt-4">Services</li>
+          <li class="pt-4">News</li>
+          <li class="pt-4">Blog</li>
+        </ul>
+      </div>
+
+      <div class="col-md-2 pt-5">
+        <ul class="text-white">
+          <li class="pt-4">Privacy Policy</li>
+          <li class="pt-4">FAQ</li>
+          <li class="pt-4">Awards</li>
+          <li class="pt-4">Testimonials</li>
+          <li class="pt-4">Careers</li>
+        </ul>
+      </div>
+      <div class="col-md-4 text-white">
+        <h3>Join Our Newsletter</h3>
+        <p>Put your investing ideas into action with full range of properties.</p>
+        <div class="save_newsletter_field">
+          <input type="text" class="form-control" placeholder="Your email address...">
+          <a href="#"><button class="btn btn-rounded text-white  my-1 waves-effect tnav2"
+              type="submit"><b>Subscribe</b></button></a>
+        </div>
+        <p>Download our mobile app to invest on different properties and monitor your investment on the go.</p>
+        <a href="#"><img src="/assets/images/gplay.png" alt="" class="img-fluid  " width="120"></a>
+        <a href="#"><img src="/assets/images/appstore.png" alt="" class="img-fluid  mx-2" width="124"></a>
+      </div>
+    </div>
+    <div class="border-top">
+      <h6 class="text-white text-center py-2">Copyright © 2020 LandCrowdy. All rights reserved.</h6>
+    </div>
+    <hr>
+    <a href="https://api.whatsapp.com/send?phone=2349028064264"><button type="button"
+        class="btn btn-info btn-rounded fixed-bottom"> <i class="fa fa-whatsapp "> </i> <b> Chat Now On
+          WhatsApp</b></button></a>
+
+  </div>
+  <!-- /Footer -->
+  <!--Modal: modalYT-->
+  <div class="modal fade" id="modalYT" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+
+      <!-- Modal Content-->
+      <div class="modal-content">
+
+        <!-- Modal Body-->
+        <div class="modal-body mb-0 p-0">
+          <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZesQ_8K5I_g" allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+
+        <!--Modal Footer-->
+        <div class="modal-footer justify-content-center flex-column flex-md-row">
+          <span class="mr-4">Spread the word!</span>
+          <div>
+            <a type="button" class="btn-floating btn-sm btn-fb">
+              <i class="fa fa-facebook-f"></i>
+            </a>
+            <!--Twitter-->
+            <a type="button" class="btn-floating btn-sm btn-tw">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <!--Google +-->
+            <a type="button" class="btn-floating btn-sm btn-gplus">
+              <i class="fa fa-google-plus"></i>
+            </a>
+            <!--Linkedin-->
+            <a type="button" class="btn-floating btn-sm btn-ins">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </div>
+          <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4"
+            data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      <!--/.Modal Content-->
+    </div>
+  </div>
+  <!--Modal: modalYT-->
+
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
+    data-dojo-config="usePlainJson: true, isDebug: false"></script>
+  <script
+    type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function (L) { L.start({ "baseUrl": "mc.us1.list-manage.com", "uuid": "513362da437534d581ade7bbd", "lid": "b9c7605f1b", "uniqueMethods": true }) })</script>
+
+  <!-- BOOTSTRAP JS -->
+  <script src="/assets/js/jquery-1.12.4.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5e0e81947e39ea1242a2cc12/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
-        <!-- Jquery Library File -->
-        <script src="/assets/js/jquery-1.12.4.min.js"></script>
-        <!-- Bootstrap js file -->
-        <script src="/assets/js/tether.min.js"></script>
-        <script src="/assets/js/bootstrap.min.js"></script>
-        <!-- Bootstrap form validator -->
-        <script src="/assets/js/validator.min.js"></script>
-        <!-- Wow js file -->
-        <script src="/assets/js/wow.js"></script>
-        <!-- Swiper Carousel js file -->
-        <script src="/assets/js/swiper.min.js"></script>
-        <!-- Counterup js file -->
-        <script src="/assets/js/waypoints.min.js"></script>
-        <script src="/assets/js/jquery.counterup.min.js"></script>
-        <!-- Magnific Popup core JS file -->
-        <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-        <!-- Slick Nav js file -->
-        <script src="/assets/js/jquery.slicknav.js"></script>
-        <!-- SmoothScroll -->
-        <script src="/assets/js/SmoothScroll.js"></script>
-        <!-- Main Custom js file -->
-        <script src="/assets/js/function.js"></script>
-        </body>
-    </html>
+  </script>
+  <!--End of Tawk.to Script-->
+  <!-- /BOOTSTRAP JS -->
+</body>
+
+</html>
